# data-engineering-sandbox

./: .flake8  .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
sandbox/notebooks/: pulling_data_quality_metrics.ipynb
sandbox/sql/: data_quality.sql
src/data_engineering_sandbox/: bson_to_sql.py  connectors.py  const.py  data_loaders.py  string_utils.py
src/data_engineering_sandbox/bson_to_sql/: __init__.py  _transformations.py
src/data_engineering_sandbox/orm_models/: airbnb.py  analytics.py  common.py  geospatial.py  mflix.py  supplies.py  training.py  types.py  weatherdata.py
src/data_engineering_sandbox/scripts/: load_sample_data.py
tests/: __init__.py  test_data_loaders.py  test_string_utils.py
tests/test_orm_models/: test_mflix.py
