[tool.poetry]
name = "data-engineering-sandbox"
version = "0.1.0"
description = ""
authors = ["Laurans"]
readme = "README.md"
packages = [{include = "data_engineering_sandbox", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.265"
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"