[tool.poetry]
name = "data-engineering-sandbox"
version = "0.1.0"
description = ""
authors = ["Laurans"]
readme = "README.md"
packages = [{include = "data_engineering_sandbox", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
kaggle = "^1.5.13"
sqlalchemy = "^2.0.13"
polars = "^0.17.13"
pandas = "^2.0.1"
psycopg2 = "^2.9.6"
loguru = "^0.7.0"
click = "^8.1.3"
pymongo = "^4.4.0"
attrs = "^23.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.265"
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry.scripts]
load_sample_data = 'data_engineering_sandbox.scripts.load_sample_data:cli'